--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ki Preço Back-End",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +23,8 @@
     "cors": "^2.8.4",
     "express": "^4.15.5",
     "mongoose": "^4.11.13"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
